2012-06-28  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am:
	(OPENJDK_VERSION): Bump to b14.
	(CORBA_CHANGESET): Update to IcedTea7 forest head.
	(HOTSPOT_CHANGESET): Likewise.
	(JAXP_CHANGESET): Likewise.
	(JAXWS_CHANGESET): Likewise.
	(JDK_CHANGESET): Likewise.
	(LANGTOOLS_CHANGESET): Likewise.
	(OPENJDK_CHANGESET): Likewise.
	(CORBA_SHA256SUM): Likewise.
	(HOTSPOT_SHA256SUM): Likewise.
	(JAXP_SHA256SUM): Likewise.
	(JAXWS_SHA256SUM): Likewise.
	(JDK_SHA256SUM): Likewise.
	(LANGTOOLS_SHA256SUM): Likewise.
	(OPENJDK_SHA256SUM): Likewise.

2012-06-28  Omair Majid  <omajid@redhat.com>

	* NEWS: Update with fix.
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/Stream.java:
	Add new member variable contextPointer.
	* pulseaudio/src/native/org_classpath_icedtea_pulseaudio_Stream.c
	(Java_org_classpath_icedtea_pulseaudio_Stream_native_1pa_1stream_1new):
	Save j_context as contextPointer.
	(Java_org_classpath_icedtea_pulseaudio_Stream_native_1pa_1stream_1unref):
	Delete the global ref and dellocate the java context.
	(cork_callback): Don't check userdata. It is NULL.
	(Java_org_classpath_icedtea_pulseaudio_Stream_native_1pa_1stream_1cork):
	Dont allocate and pass a java_context to pa_stream_cork. It is not needed.
	* pulseaudio/unittests/org/classpath/icedtea/pulseaudio/PulseAudioClipTest.java
	(testOpenCloseLotsOfTimes): New method.

2012-06-26  Omair Majid  <omajid@redhat.com>

	* test/tapset/jstaptest.pl (get_arch_dir): Fix dir for x86.

2012-06-13  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* NEWS: Add 2.1.1 & 2.2.1 release notes.

2012-06-13  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am:
	(CORBA_CHANGESET): Update to forest head and
	bring in security updates.
	(HOTSPOT_CHANGESET): Likewise.
	(JAXP_CHANGESET): Likewise.
	(JDK_CHANGESET): Likewise.
	(CORBA_SHA256SUM): Likewise.
	(HOTSPOT_SHA256SUM): Likewise.
	(JAXP_SHA256SUM): Likewise.
	(JDK_SHA256SUM): Likewise.
	* patches/boot/ecj-diamond.patch: