@@ -1,3 +1,8 @@
+2012-06-28  Omair Majid  <omajid@redhat.com>
+
+	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioSourceDataLine.java
+	(write): Synchronize access to writeInterrupted flag.
+
 2012-06-28  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* Makefile.am:
